# CMakeTest

./: CMakeLists.txt  README.md  main.c
drivers/: CMakeLists.txt
src/: CMakeLists.txt
src/drivers/: lib.c
tests/: CMakeLists.txt
tests/drivers/: CMakeLists.txt  test_lib.cpp
